# DjangoAdmin

./: README.md  config.toml  manage.py  pyproject.toml
api/: __init__.py
api/admin/: __init__.py  menu.py  user.py
api/admin/ui/: article.py  product.py  user.py
app/: settings.py  urls.py
backend/backend/: settings.py
common/: api.py  exception.py  export.py  middleware.py  models.py  response.py  router.py  serizalize.py  validate.py  wrapped.py
common/tools/: upload.py
common/utils/: contextholder.py  dict_utils.py
constants/: __init__.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_usertoken_user_created_at_user_updated_at_and_more.py  0003_user_uuid_usertoken_uuid.py  0004_usertoken_expire_at_usertoken_token_usertoken_user.py  0005_usertoken_browser_usertoken_device_usertoken_ip_and_more.py  0006_usertoken_sec_ua.py  0007_remove_user_uuid_remove_usertoken_uuid_and_more.py
core/services/: auth.py
docker/: .gitignore  docker-compose.yaml
libs/elementui/: base.py  form.py  menu.py  table.py
modules/forms/: apps.py
modules/invite/: apps.py
modules/posts/: admin.py  apps.py  models.py
modules/posts/migrations/: 0001_initial.py  0002_remove_article_tags_article_tag_ids_and_more.py  0003_alter_article_author_alter_article_category.py
modules/settings/: apps.py  models.py
modules/settings/migrations/: 0001_initial.py
modules/store/: apps.py  models.py
modules/store/migrations/: 0001_initial.py  0002_productattr_group_productskuvaluerelation_image_and_more.py  0003_alter_productattr_group.py  0004_productcategory_icon.py  0005_alter_product_price.py
web/admin/: components.d.ts  index.html  uno.config.ts
web/admin/src/: App.vue  config.js  main.js
web/admin/src/assets/scss/: main.scss
web/admin/src/components/: QuillEditor.vue
web/admin/src/components/layout/: SubMenu.vue
web/admin/src/router/: index.ts
web/admin/src/views/: HomeView.vue  LayoutView.vue  LoginView.vue  SubMenuView.vue  TableView.vue
web/admin/src/views/components/: Form.vue  FormItem.vue
web/admin/src/views/components/widget/: UploadImage.vue
web/app/: .gitignore  manifest.json  pages.json
web/app/components/design/: render.vue  uiview.vue
web/app/pages/index/: index.vue
