[project]
name = "djangoadmin"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "suke", email = "suke971219@gmail.com" }
]
dependencies = [
    "better-exceptions~=0.3.3",
    "django~=5.0.7",
    "psycopg~=3.2.1",
    "toml~=0.10.2",
    "pillow~=10.4.0",
    "uvicorn~=0.30.3",
    "pandas~=2.2.2",
    "openpyxl~=3.1.5",
    "psycopg2-binary~=2.9.9",
]
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = [
    "pyright~=1.1.373",
]


[tool.pyright]
venvPath = "."          # rye installs the venv in the current dir
venv = ".venv"          #       in a folder called `.venv`
strict = []    # use 'strict' checking on all files
pythonVersion = "3.12"  # if library, specify the _lowest_ you support


[tool.ruff]
# if this is a library, enter the _minimum_ version you
# want to support, otherwise do py312
target-version = "py312"
line-length = 180  # use whatever number makes you happy

[tool.ruff.lint]
# you can see the looong list of rules here:
# https://docs.astral.sh/ruff/rules/
# here's a couple to start with
select = [
	"A",    # warn about shadowing built-ins
	"E",    # style stuff, whitespaces
	"F",    # important pyflakes lints
	"I",    # import sorting
	"N",    # naming
	"T100", # breakpoints (probably don't want these in prod!)
]
# if you're feeling confident you can do:
# select = ["ALL"]
# and then manually ignore annoying ones:
# ignore = [...]

[tool.ruff.lint.isort]
# so it knows to group first-party stuff last
known-first-party = ["postmodern"]